--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,10 @@
 
 
             </div>
+<div>
+    <p>För mer info kontaktar du vår ordförande:</p>
+    <p>Överkamerer<br>David Ohlin<br><a href="mailto:ok@altekamereren.org">ok@altekamereren.org</a><br>0705-111750</p>
+</div>
 
         </div>
         <div class="right-side">
