moving contact to footer

--- a/src/index.html
+++ b/src/index.html
@@ -61,22 +61,20 @@
                     <br />eller Jubileumsgruppen via <a
                         href="mailto:jubileum@altekamereren.org">jubileum@altekamereren.org</a><br /><br />Vi ses den
                     16/11-2019!</p>
-
-
             </div>
-<div>
-    <p>För mer info kontaktar du vår ordförande:</p>
-    <p>Överkamerer<br>David Ohlin<br><a href="mailto:ok@altekamereren.org">ok@altekamereren.org</a><br>0705-111750</p>
-</div>
-
         </div>
         <div class="right-side">
             <div class="img-container">
                 <img class="image" src="./assets/akwantsyou-ht2010.png" alt="Alte Kamereren wants you">
             </div>
         </div>
-
+    
     </div>
+    <footer class="container">
+        <p>För mer info kontaktar du vår ordförande:</p>
+        <p>Överkamerer<br>David Ohlin<br><a
+                href="mailto:ok@altekamereren.org">ok@altekamereren.org</a><br>0705-111750</p>
+    </footer>
 </body>
 
 </html>
